@@ -1,5 +1,12 @@
 2006-12-02  Emmanuele Bassi  <ebassi@openedhand.com>
 
+	* xs/ClutterTexture.xs:
+	* xs/ClutterStage.xs:
+	* xs/ClutterRectangle.xs:
+	* xs/ClutterTimeline.xs: Synch with upstream API.
+
+2006-12-02  Emmanuele Bassi  <ebassi@openedhand.com>
+
 	D xs/ClutterVideoTexture.xs
 	A xs/ClutterAlpha.xs
 	A xs/ClutterBehaviourOpacity.xs
